--- a/src/styles/KanbanBoard.css
+++ b/src/styles/KanbanBoard.css
@@ -771,3 +771,9 @@
     transform: scale(1);
   }
 }
+
+/* Remove or set to transparent any background/background-color on main/root containers */
+.kanban-board-container, .kanban-board, .modal-content, .modal-overlay {
+  background: transparent !important;
+  background-color: transparent !important;
+}
