--- a/src/styles/OTPVerfication.css
+++ b/src/styles/OTPVerfication.css
@@ -235,3 +235,9 @@
     font-size: 2.8rem;
   }
 }
+
+/* Remove or set to transparent any background/background-color on main/root containers */
+.otp-verification-container, .otp-form, .modal-content, .modal-overlay {
+  background: transparent !important;
+  background-color: transparent !important;
+}
