--- a/src/styles/OTPVerfication.css
+++ b/src/styles/OTPVerfication.css
@@ -4,7 +4,8 @@
   flex-direction: row;
   align-items: flex-start;
   justify-content: space-between;
-  background: linear-gradient(to right, #fdb99b, #cf8bf3, #a770ef);
+  background: transparent !important;
+  background-color: transparent !important;
   padding: 2rem 8rem;
   position: relative;
   overflow: hidden;
