Updated mobile version css for project type forms

--- a/src/styles/CreatePersonalProject.css
+++ b/src/styles/CreatePersonalProject.css
@@ -209,6 +209,18 @@
   }
 }
 
+@media (max-width: 480px) {
+  footer {
+    margin-top: 2.2rem;
+  }
+}
+
+@media (max-width: 360px) {
+  footer {
+    margin-top: 1.5rem;
+  }
+}
+
 /* Remove or set to transparent any background/background-color on main/root containers */
 .create-personal-project-container, .create-personal-project-form, .modal-content, .modal-overlay {
   background: transparent !important;
